update AWS_swarm files

--- a/slides/.0999-remerciements.md
+++ b/slides/.0999-remerciements.md
@@ -4,3 +4,4 @@
 * Docker: https://www.docker.com
 * Bouquet.ai: https://www.bouquet.ai
 * ByteClub & Delapouite: https://github.com/byteclubfr
+* draw.io: https://www.draw.io
