--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -1,12 +1,13 @@
 $background:images/background.svg$
 ## Ceci n'est pas
 ---
-* un playdoyer pour / contre Docker
-* une conf technique
-* un référentiel de bonnes pratiques
+<section>
+  <p class="fragment fade-up">- un playdoyer pour / contre Docker</p>
+  <p class="fragment fade-up">- une conf technique</p>
+  <p class="fragment fade-up">- un guide des bonnes pratiques</p>
+  <p class="fragment fade-up"><br/>c'est un retour d'expérience dans notre contexte</p>
+</section>
 ---
-<br/>
-c'est un retour d'expérience dans notre contexte.
 
 note:
 avec des choses que l'on fait probablement mal, que l'on peut améliorer
