--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -9,5 +9,5 @@ $background:images/background.svg$
 </section>
 
 
-note:
+note: @jp
 avec des choses que l'on fait probablement mal, que l'on peut améliorer
