add swarm slide

--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -5,7 +5,7 @@ $background:images/background.svg$
   <p class="fragment fade-up">• un playdoyer pour / contre Docker</p>
   <p class="fragment fade-up">• une conf technique</p>
   <p class="fragment fade-up">• un guide des bonnes pratiques</p>
-  <p class="fragment fade-up"><br/>c'est un retour d'expérience dans notre contexte</p>
+  <p class="fragment fade-up"><br/>c'est un retour d'expérience</p>
 </section>
 
 
