--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -2,7 +2,7 @@ $background:images/background.svg$
 ## Ceci n'est pas
 ---
 <section>
-  <p class="fragment fade-up">• un playdoyer pour / contre Docker</p>
+  <p class="fragment fade-up">• un plaidoyer pour / contre Docker</p>
   <p class="fragment fade-up">• une conf technique</p>
   <p class="fragment fade-up">• un guide des bonnes pratiques</p>
   <p class="fragment fade-up"><br/>c'est un retour d'expérience</p>
