add dead whale, update rex

--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -1,13 +1,9 @@
 $background:images/background.svg$
-## Ceci n'est pas
+## Retour d'expérience
 ---
-<section>
-  <p class="fragment fade-up">• un plaidoyer pour / contre Docker</p>
-  <p class="fragment fade-up">• une conf technique</p>
-  <p class="fragment fade-up">• un guide des bonnes pratiques</p>
-  <p class="fragment fade-up"><br/>c'est un retour d'expérience</p>
-</section>
 
+* utilisation Swarm chez bouquet
+* avec nos connaissances
 
 note: @jp
 avec des choses que l'on fait probablement mal, que l'on peut améliorer
