--- a/slides/0020-rex.md
+++ b/slides/0020-rex.md
@@ -3,7 +3,7 @@ $background:images/background.svg$
 ---
 
 * utilisation Swarm chez bouquet
-* avec nos connaissances
+* avec notre niveau de connaissances
 
 note: @jp
 avec des choses que l'on fait probablement mal, que l'on peut améliorer
